history text wrap (issue cloud/polemarchplus#25)

--- a/polemarch/static/css/ansi-colors.css
+++ b/polemarch/static/css/ansi-colors.css
@@ -1,4 +1,9 @@
-.history-stdout { background-color: #000000; color: #ECECEC; font-weight: bold;}
+.history-stdout {
+    background-color: #000000;
+    color: #ECECEC;
+    font-weight: bold;
+    white-space: pre-wrap;
+ }
 
 .ansi-black-fg { color: #000000; }
 .ansi-red-fg { color: #FF6060; }
